style.css
body {
  margin: 0;
  padding: 0;
  display: grid;
  grid-template-columns: 1fr 5fr;
  min-height: 100vh;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  box-sizing: border-box;
}

.header {
  box-shadow: 0px 5px 15px gray;
  display: grid;
  grid-template-columns: 1fr;
  grid-column-start: 2;
}

.search-container {
  display: grid;
  grid-template-columns: 6fr 2fr;
  align-items: center;
}

input {
  padding: 5px 8px;
  border-radius: 16px;
  border: none;
  background-color: #e2e8f0;
  width: 80%;
}

.search-field {
  display: grid;
  align-items: center;
  grid-template-columns: 10% 5fr;
}

.search-field img {
  justify-self: center;
}

.notification-container {
  display: grid;
  justify-self: start;
  grid-template-columns: 20% 20% 60%;
  align-items: center;
  justify-items: center;
  gap: 10px;
}

.notification-container p {
  font-weight: 700;
}

img[src$="svg"] {
  width: 30px;
}

input {
  justify-self: stretch;
}

.greeting-container {
  display: grid;
  grid-template-columns: 2fr 1fr;
  align-items: center;
}

.greeting-message {
  display: grid;
  grid-template-columns: 25% 40%;
  align-items: center;
}

#greeting-profile-picture {
  justify-self: start;
  margin-left: 40px;
}

.buttons {
  display: grid;
  grid-template-columns: 15% 15% 15%;
  align-items: center;
  justify-items: center;
  justify-content: center;
  gap: 40px;
}

.welcome-message {
  display: grid;
  grid-template-columns: 1fr 5fr;
  align-items: center;
}

.welcome-message p {
  margin-bottom: 0;
}

#welcome-message-header {
  margin-top: 0;
}

button {
  width: fit-content;
  padding: 10px 20px;
  border-radius: 16px;
  background-color: #1992d4;
  color: white;
  font-weight: 700;
  border: none;
}

.sidebar {
  background-color: #1992d4;
  grid-column: 1;
  grid-row: 1 / span 2;
  grid-template-rows: 120px;
  grid-auto-rows: 350px;
  align-items: center;

  display: grid;
  color: white;
}

.sidebar > div {
  padding: 40px;
}

#dashboard-logo {
  display: grid;
  grid-template-columns: auto auto;
  align-items: center;
  gap: 20px;
}

#dashboard-icon {
  align-self: center;
  justify-self: end;
  width: 40px;
}

svg {
  fill: white;
  width: 25px;
}

.menu,
.settings {
  font-size: 1.3rem;
  font-weight: 500;
}

.menu > div,
.settings > div {
  margin-bottom: 10px;
  display: grid;
  align-items: center;
  grid-template-columns: 30px auto;
  gap: 15px;
}

.main {
  display: grid;
  grid-template-columns: 2fr 1fr;
}

.announcements {
  display: grid;
  grid-template-columns: 1fr;
}

.projects {
  display: grid;
  grid-row: span 2;
  gap: 50px;
}

.trending-profiles {
  display: grid;
  grid-column: 2;
  row-gap: 10px;
}

.user {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.project {
  border: 2px solid brown;
}

#project-header {
  grid-column: span 2;
  margin: 0;
  padding: 0;
}

.search-container > img {
  width: 30px;
}

.search-container > p {
  font-weight: 800;
}

#login-profile-picture {
  width: 40px;
  height: 40px;
  border-radius: 50%;
}

#greeting-profile-picture {
  width: 60px;
  height: 60px;
  border-radius: 50%;
}

